Ajustar estilos do mapa

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Aplicação para testes e exemplos de um mapa para rota do robô."
     />
-    <title>SISTEMA AVG - Mapa</title>
+    <title>sistema AVG - Mapa</title>
   </head>
   <body>
     <noscript>Para ter acesso ao conteúdo do site é preciso habilitar o JavaScript no navegador.</noscript>
